# ChangeLog for dev-java/tomcat-servlet-api
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.46 2008/03/17 22:34:21 maekke Exp $

  17 Mar 2008; Markus Meier <maekke@gentoo.org>
  tomcat-servlet-api-5.5.26.ebuild, tomcat-servlet-api-6.0.16.ebuild:
  amd64 stable, security bug #196066

  16 Mar 2008; Kenneth Prugh <ken69267@gentoo.org>
  tomcat-servlet-api-4.1.36.ebuild:
  amd64 stable, bug #212641

  11 Mar 2008; Brent Baude <ranger@gentoo.org>
  tomcat-servlet-api-4.1.36.ebuild:
  Marking tomcat-servlet-api-4.1.36 ppc64 for bug 212641

  08 Mar 2008; Markus Meier <maekke@gentoo.org>
  tomcat-servlet-api-4.1.36.ebuild:
  x86 stable, bug #212641

  08 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  tomcat-servlet-api-4.1.36.ebuild:
  Stable on ppc.

  22 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  tomcat-servlet-api-6.0.16.ebuild:
  ppc stable, bug #196066

  11 Feb 2008; Brent Baude <ranger@gentoo.org>
  tomcat-servlet-api-6.0.16.ebuild:
  Marking tomcat-servlet-api-6.0.16 ppc64 for bug 196066

  10 Feb 2008; Markus Meier <maekke@gentoo.org>
  tomcat-servlet-api-5.5.26.ebuild, tomcat-servlet-api-6.0.16.ebuild:
  x86 stable, security bug #196066

*tomcat-servlet-api-6.0.16 (07 Feb 2008)

  07 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  +tomcat-servlet-api-6.0.16.ebuild:
  Bumped 6.0 to latest release

*tomcat-servlet-api-5.5.26 (05 Feb 2008)

  05 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  +tomcat-servlet-api-5.5.26.ebuild:
  Bumped 5.5 to latest release

*tomcat-servlet-api-5.5.25-r1 (15 Jan 2008)

  15 Jan 2008; Jean-Noël Rivasseau <elvanor@gentoo.org>
  +files/jsp-api-2.0-manifest, +files/servlet-api-2.4-manifest,
  +tomcat-servlet-api-5.5.25-r1.ebuild:
  Minor change to produce OSGi usable jars.

*tomcat-servlet-api-4.1.36 (03 Nov 2007)
*tomcat-servlet-api-3 (03 Nov 2007)

  03 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>