@@ -5,9 +5,9 @@ DIST apache-tomcat-4.1.36-src.tar.gz 3715200 RMD160 344230cac551a483cef439153dd1
 DIST apache-tomcat-5.5.26-src.tar.gz 5062991 RMD160 c82e7640b36c27cfc6ea51f01dc3ff492441a930 SHA1 1eb1c479023d3a7e459ce03860d9d984b673ab27 SHA256 ddc677d7391c438e6102d0b3e9653eaca661344ef74b0260c1f488340d660395
 DIST apache-tomcat-6.0.16-src.tar.gz 3527896 RMD160 8e6c0900889439f4cb89db35afb0c27e77103c00 SHA1 74127ba3da450a97869f2a2a2f0e134d23474018 SHA256 9e0a776f9d9c5fe935a39b066f74c07e7d26b4f30b66b22622a20dec235b0a7f
 DIST jakarta-servletapi-src.tar.gz 65342 RMD160 9fc0def14700c4850455da1312e50135fd56eea9 SHA1 ffa93e8b69e0aa4384b7ce4cbb7f4552b6dd467a SHA256 404e2c55423c609122921a91e03f2b67d371fedc0af8996e005862d83d626697
-EBUILD tomcat-servlet-api-3.ebuild 951 RMD160 0fdfa0a842e2ee82a17ca5808b1455d375652d58 SHA1 577da669ad93a2cb22a8116f01a4a7401796ab3f SHA256 88d01a9365968dbb0c966906081b03c8b2c42d202a6931840bd04435bdb6a779
-EBUILD tomcat-servlet-api-4.1.36.ebuild 1072 RMD160 324f52f745bab15821b844a5217cc651e659c695 SHA1 150b446e193a46f3d7eb0c1ac83e6889bb39c216 SHA256 8739bb4c616741fe35147afcb6c023bfedab338816455415128625f3e87d39f6
-EBUILD tomcat-servlet-api-5.5.26.ebuild 1608 RMD160 9cc25309e005a34ff54c664750a973087c900ce3 SHA1 f4240b39116b8e0d4242eaf8a0eb80777280d70a SHA256 322b64a38a4ed917526eb9beec8bda616998834d2fde7f5f274911366b2b241b
-EBUILD tomcat-servlet-api-6.0.16.ebuild 968 RMD160 823e759f2dda17ce4a4f8329f2b29b4f94516f5a SHA1 13f96d316235198d36ba91513666ec0f47fdeabb SHA256 ca28d9f7a12b6c327d462716dfbd5f752e9ff2bf1da6dc22576c87e0a43a6be3
-MISC ChangeLog 8470 RMD160 4ec2820298ed9f36c305f876e7c6f87ce80d1146 SHA1 9dd6b37f169fb2949e9d572c49c37dc7d2840e4e SHA256 eb659f91fe2cb35386fff0c25cfc240c112b8d7ab1e50e3af741dd3c625dfa34
+EBUILD tomcat-servlet-api-3.ebuild 951 RMD160 879611a6f3447bc78a2a7a666f53f06b120a73ff SHA1 9fa557a4807f681df8dd8b641a532c7839ebc55f SHA256 272219d9d05d45e90f430160f573dd8e2e59ec871c7beccf44977abc6d0cd76c
+EBUILD tomcat-servlet-api-4.1.36.ebuild 1072 RMD160 7a69fffc1b410ba770f35195e2424524b18313c8 SHA1 6b9999fee36635e7f8848030c98f535f5a76673d SHA256 4e8195b4a86f3cc9ab68c581d262e9250fed91a5fdb30c38f3c7b1af5710ce28
+EBUILD tomcat-servlet-api-5.5.26.ebuild 1608 RMD160 aed153af9002bd446262ac4dca47055fe7778f1d SHA1 64ab8fcf8ff530d110a3322f048063ada69a542c SHA256 26b2d6dba99aaa8268d97df8ff387a45769e6340b43af3653802a79d565550b1
+EBUILD tomcat-servlet-api-6.0.16.ebuild 968 RMD160 75cca692d2d4bc5b84d9dbdbd5a24aa1c23fe822 SHA1 c42480f6d53865b1bf1807ace4ff593e8d139025 SHA256 7a3915b0e5e91c29ab9c6f3417f342ff2899c8c176688ecec6bbb3d92b61666d
+MISC ChangeLog 8799 RMD160 afaa26b853270e17d4be82e15e15148617baa66f SHA1 673f3871e6f484ad9a9758dc58af6758e0e15cb3 SHA256 1f02333001dab9820f1d8b51dfd182cc8d1258aa5b3fc782d5aceada4bf10853
 MISC metadata.xml 370 RMD160 80f77811a1330480797cff01b1e90e883ecb4d51 SHA1 0d60a8ede5babbd15577612fe7b9e504e5a73689 SHA256 d82a36005520445f65916bb8e8e5a4e41c3af6cc5be87cb2263337074e39b704
