@@ -16,7 +16,7 @@ DEPEND=">=virtual/jdk-1.4"
 RDEPEND=">=virtual/jre-1.4"
 LICENSE="Apache-1.1"
 SLOT="2.3"
-KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux ~x86-freebsd"
+KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux"
 IUSE=""
 S="${WORKDIR}/${MY_P}/servletapi"
 
